LIST OF CHANGES

 - use icons from the lates set of brand images
 - display institute's logo and favicon only if pages are servered
     from institute's servers
 - remove unnecessary aliasing of urls

release 86.9
 - to account for ephemeral staging areas on OpenStack, extend staging
   directory path match expression in Apache httpd config file
 - use bash shell when executing system calls from Perl
 - copied srpipe::runfolder module (from SVN data_handling package)
   as npg_tracking::illumina::runfolder to this package, removed tests
   that depended on test folder hierarchy in the data_handling package

release 86.8
 - remove redundant script for reporting sequencing failures to RT
 - remove uptime info from instrument page - function no longer available
 - correct handling of transition from 'down for service' to 'down for repair'

release 86.7
 - stop building on Travis under Perl 5.16,
   see https://rt.cpan.org/Public/Bug/Display.html?id=123310
 - reference find role: when parsing a genome reference string 
   return the analysis, along with the organism, strain
   and transcriptome version, if present
 - refactor transcriptome::find to improve code reuse and add
   new find file/path/index attributes and functionalities
 - when inflating rpt key, cast id_run, position and tag index
   (if any) values to integers and raise an error if conversion
   gives a warning
 - unused tracking server features removed:
     simultaneous status update for multiple runs;
     simultaneous status update for multiple instruments;
     simultaneous mod update for multiple instruments;
     XML feeds for individual run statuses with listing of
       all runs at this status;
     flowcell verification;
     complex computation of width of padding id_run in run name
       for display purposes 

release 86.6
 - unused db tables, which were renamed in the previous release,
     are dropped; exclusions in teh DBIx class loader script removed